# artcraft

./: .gitignore  CLAUDE.md  Cargo.toml
crates/api_clients/artcraft/artcraft_router/: Cargo.toml
crates/api_clients/artcraft/artcraft_router/src/: test_helpers.rs
crates/api_clients/artcraft/artcraft_router/src/api/: audio_list_ref.rs  character_list_ref.rs  common_image_model.rs  common_video_model.rs  image_list_ref.rs  image_ref.rs  provider.rs  router_video_model.rs  video_list_ref.rs
crates/api_clients/artcraft/artcraft_router/src/client/: mod.rs  multi_router_client.rs  multi_router_client_builder.rs  router_client.rs  router_fal_client.rs  router_grok_api_client.rs
crates/api_clients/artcraft/artcraft_router/src/errors/: client_error.rs  provider_error.rs
crates/api_clients/artcraft/artcraft_router/src/generate/generate_image/: generate_image_request.rs  generate_image_request_builder.rs  image_generation_cost_estimate.rs  image_generation_plan.rs  mod.rs
crates/api_clients/artcraft/artcraft_router/src/generate/generate_image_v2/: image_generation_request.rs
crates/api_clients/artcraft/artcraft_router/src/generate/generate_splat/: splat_generation_cost_estimate.rs
crates/api_clients/artcraft/artcraft_router/src/generate/generate_video/: generate_video_request.rs  generate_video_request_builder.rs  generate_video_response.rs  mod.rs  video_generation_cost_estimate.rs
crates/api_clients/artcraft/artcraft_router/src/generate/generate_video_v2/: CLAUDE.md  video_generation_draft.rs  video_generation_request.rs
crates/api_clients/beeble_client/: CLAUDE.md  Cargo.toml
crates/api_clients/beeble_client/src/: lib.rs
crates/api_clients/beeble_client/src/creds/: beeble_api_key.rs  mod.rs
crates/api_clients/beeble_client/src/error/: beeble_client_error.rs  beeble_error.rs  beeble_generic_api_error.rs  beeble_specific_api_error.rs  mod.rs
crates/api_clients/beeble_client/src/requests/: mod.rs
crates/api_clients/beeble_client/src/requests/create_upload_url/: create_upload_url.rs  mod.rs  request_types.rs
crates/api_clients/beeble_client/src/requests/get_job_status/: get_job_status.rs  mod.rs
crates/api_clients/beeble_client/src/requests/start_generation/: handle_error_response.rs  mod.rs  request_types.rs  start_generation.rs
crates/api_clients/beeble_client/src/test_utils/: get_test_api_key.rs  mod.rs
crates/api_clients/comet_api_client/: Cargo.toml
crates/api_clients/comet_api_client/src/: lib.rs
crates/api_clients/comet_api_client/src/creds/: comet_api_key.rs  mod.rs
crates/api_clients/comet_api_client/src/error/: categorize_comet_error.rs  comet_bad_request_api_error.rs  comet_client_error.rs  comet_error.rs  comet_generic_api_error.rs  comet_specific_api_error.rs  mod.rs
crates/api_clients/comet_api_client/src/generate/video/: generate_doubao_seedance_1p0_pro.rs  generate_doubao_seedance_1p5_pro.rs  generate_doubao_seedance_2p0.rs  generate_doubao_seedance_2p0_fast.rs  generate_vidu_q3.rs  generate_vidu_q3_turbo.rs  generate_wan_2p6.rs  generate_wan_2p7.rs  mod.rs
crates/api_clients/comet_api_client/src/requests/: comet_host.rs  mod.rs  video_task_status.rs
crates/api_clients/comet_api_client/src/requests/create_video/: create_video.rs  mod.rs  request_types.rs
crates/api_clients/comet_api_client/src/requests/get_video_content/: get_video_content.rs  mod.rs  request_types.rs
crates/api_clients/comet_api_client/src/requests/get_video_task/: get_video_task.rs  mod.rs  request_types.rs
crates/api_clients/comet_api_client/src/test_utils/: mod.rs
crates/api_clients/grok_api_client/: Cargo.toml
crates/api_clients/grok_api_client/src/: lib.rs
crates/api_clients/grok_api_client/src/api/requests/: mod.rs  xai_host.rs
crates/api_clients/grok_api_client/src/api/requests/files/: mod.rs
crates/api_clients/grok_api_client/src/api/requests/images/: mod.rs
crates/api_clients/grok_api_client/src/api/requests/videos/: mod.rs
crates/api_clients/grok_api_client/src/api/types/: mod.rs
crates/api_clients/grok_api_client/src/api/types/image_types/: image_aspect_ratio.rs  image_model.rs  image_resolution.rs  image_response_format.rs  mod.rs
crates/api_clients/grok_api_client/src/api/types/video_types/: mod.rs  video_aspect_ratio.rs  video_model.rs  video_resolution.rs
crates/api_clients/grok_api_client/src/creds/: grok_api_key.rs  mod.rs
crates/api_clients/grok_api_client/src/error/: classify_grok_http_error.rs  grok_client_error.rs  grok_error.rs  grok_generic_api_error.rs  grok_specific_api_error.rs  mod.rs
crates/api_clients/grok_api_client/src/test_utils/: get_test_api_key.rs  mod.rs  setup_test_logging.rs
crates/api_clients/worldlabs_api_client/: Cargo.toml
crates/api_clients/worldlabs_api_client/src/api/api_types/: world_labs_model.rs
crates/api_clients/worldlabs_api_client/src/pricing/: check_pricing.rs
crates/cli/production/support-tool/: CLAUDE.md  Cargo.toml
crates/cli/production/support-tool/src/commands/seedance2pro/: dispatch.rs
crates/lib/actix_cors_configs/: Cargo.toml
crates/lib/actix_cors_configs/src/: cors.rs  testing.rs
crates/lib/actix_cors_configs/src/configs/: fakeyou.rs  storyteller.rs  storyteller_board.rs  storyteller_render.rs  storyteller_studio.rs
crates/lib/jwt_signer/: Cargo.toml
crates/lib/jwt_signer/src/: jwt_signer.rs  jwt_signer_error.rs  lib.rs
crates/lib/url_config/: Cargo.toml
crates/lib/url_config/src/: third_party_url_redirector.rs
crates/service/web/dummy_service/: Cargo.toml
crates/service/web/dummy_service/src/: env_args.rs
crates/service/web/storyteller_web/: Cargo.toml
crates/service/web/storyteller_web/src/: main.rs
crates/service/web/storyteller_web/src/billing/: internal_product_to_stripe_lookup_impl.rs
crates/service/web/storyteller_web/src/docs/: api_doc.rs
crates/service/web/storyteller_web/src/startup/: build_dependencies.rs  setup_inference_providers.rs  setup_stripe_artcraft.rs  setup_stripe_fakeyou.rs
crates/service/web/storyteller_web/src/state/: server_state.rs
crates/service/web/storyteller_web/src/util/: http_download_url_to_bytes.rs
(+2086 files in other folders)
