[package]
name = "grok_api_client"
edition = "2024"
version = "0.0.1"
publish = false

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[lib]
name = "grok_api_client"
path = "src/lib.rs"

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
errors.workspace = true

# External
log.workspace = true
# `multipart` is enabled on top of the workspace feature set so we can use
# `reqwest::multipart` for POST /v1/files uploads.
reqwest = { workspace = true, features = ["multipart"] }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
test_data.workspace = true
tokio = { version = "1", features = ["full"] }
