[package]
name = "actix_cors_configs"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "actix_cors_configs"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration = { workspace = true }

# Internal
server_environment.workspace = true

# External
log = { workspace = true }

# Actix
actix-cors = { workspace = true }
actix-http = { workspace = true }
actix-web = { workspace = true }
url = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
speculoos.workspace = true
