[package]
name = "jwt_signer"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "jwt_signer"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration = { version = "0.1", path = "../../workspace-build-acceleration" }

# External
hmac = "0.10.1" # jwt signing
jwt = "0.13.0"
sha2 = "0.9.9" # hmac signing

[dev-dependencies]
# None yet
