[package]
name = "url_config"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "url_config"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration = { workspace = true }

# Internal
actix_helpers = { path = "../actix_helpers" }
server_environment.workspace = true

# External
actix-web = { workspace = true }
anyhow = { workspace = true }
