[package]
name = "dummy-service"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[[bin]]
name = "dummy-service"
path = "src/main.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration = { workspace = true }

# Internal
actix_cors_configs = { path = "../../../lib/actix_cors_configs" }
actix_helpers = { path = "../../../lib/actix_helpers" }
easyenv = { path = "../../../lib/easyenv" }
errors = { workspace = true }
server_environment.workspace = true

# External
chrono = { workspace = true }
hostname.workspace = true

# Web
actix-http = { workspace = true }
actix-service = { workspace = true }
actix-web = { workspace = true }

# Serialization
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
